--- a/example/ios/App/Podfile
+++ b/example/ios/App/Podfile
@@ -13,7 +13,7 @@ def capacitor_pods
   pod 'CapacitorCordova', :path => '../../node_modules/@capacitor/ios'
   pod 'CapacitorCamera', :path => '../../node_modules/@capacitor/camera'
   pod 'CapacitorSplashScreen', :path => '../../node_modules/@capacitor/splash-screen'
-  pod 'CapacitorKeepAwayPlugin', :path => '../../..'
+  pod 'GachlabCapacitorKeepAwakePlugin', :path => '../../..'
 end
 
 target 'App' do
