--- a/example/package.json
+++ b/example/package.json
@@ -13,12 +13,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@capacitor/core": "latest",
+    "@capacitor/android": "6.1.0",
     "@capacitor/camera": "latest",
+    "@capacitor/core": "latest",
+    "@capacitor/ios": "6.1.0",
     "@capacitor/splash-screen": "latest",
-    "capacitor-keep-away-plugin": "file:..",
-    "@capacitor/ios": "^6.0.0",
-    "@capacitor/android": "^6.0.0"
+    "@gachlab/capacitor-keep-awake-plugin": "file:.."
   },
   "devDependencies": {
     "@capacitor/cli": "latest",
