--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@gachlab/capacitor-keep-awake-plugin",
-  "version": "0.0.2",
-  "description": "A plugin to prevent device sleep",
+  "version": "0.0.1",
+  "description": "A plugin to keep awake the device screen",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
@@ -13,9 +13,9 @@
     "ios/Sources",
     "ios/Tests",
     "Package.swift",
-    "CapacitorKeepAwayPlugin.podspec"
+    "GachlabCapacitorKeepAwakePlugin.podspec"
   ],
-  "author": "Guillermo Carrillo",
+  "author": "",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -31,7 +31,7 @@
   ],
   "scripts": {
     "verify": "npm run verify:ios && npm run verify:android && npm run verify:web",
-    "verify:ios": "xcodebuild -scheme CapacitorKeepAwayPlugin -destination generic/platform=iOS",
+    "verify:ios": "xcodebuild -scheme GachlabCapacitorKeepAwakePlugin -destination generic/platform=iOS",
     "verify:android": "cd android && ./gradlew clean build test && cd ..",
     "verify:web": "npm run build",
     "lint": "npm run eslint && npm run prettier -- --check && npm run swiftlint -- lint",
@@ -39,7 +39,7 @@
     "eslint": "eslint . --ext ts",
     "prettier": "prettier \"**/*.{css,html,ts,js,java}\"",
     "swiftlint": "node-swiftlint",
-    "docgen": "docgen --api CapacitorKeepAwakePlugin --output-readme README.md --output-json dist/docs.json",
+    "docgen": "docgen --api KeepAwakePlugin --output-readme README.md --output-json dist/docs.json",
     "build": "npm run clean && npm run docgen && tsc && rollup -c rollup.config.js",
     "clean": "rimraf ./dist",
     "watch": "tsc --watch",
